--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             </div>
                         </div>
                         <div class="text-center mt-3">
-                            <a href="path/to/your-cv.pdf" download class="btn btn-primary">Download CV</a>
+                            <a href="CV/CV_BOUGUERRA.pdf" download class="btn btn-primary">Download CV</a>
                         </div>
                     </div>
                 </div>
@@ -127,27 +127,99 @@
     <!-- Skills Section -->
     <section class="skills-section" id="skills">
         <div class="container">
-            <h2 class="section-title text-center" data-aos="fade-up">Skills</h2>
+            <h2 class="section-title text-center" data-aos="fade-up">Skills & Expertise</h2>
             <div class="row g-4">
+                <!-- Category 1: Programming Languages -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-                    <div class="skill-card text-center">
-                        <i class="bi bi-code-slash skill-icon"></i>
-                        <h4>AI & ML</h4>
-                        <p>Developing intelligent systems using Python, TensorFlow, and PyTorch.</p>
+                    <div class="skill-card">
+                        <div class="skill-header">
+                            <i class="bi bi-code-slash skill-icon"></i>
+                            <h4>Programming Languages</h4>
+                        </div>
+                        <ul class="skill-list">
+                            <li>Python <span class="skill-level">Expert</span></li>
+                            <li>Java<span class="skill-level">Intermediate</span></li>
+                            <li>R <span class="skill-level">Intermediate</span></li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-                    <div class="skill-card text-center">
-                        <i class="bi bi-gear skill-icon"></i>
-                        <h4>Data Science</h4>
-                        <p>Analyzing and visualizing data to derive actionable insights.</p>
-                    </div>
-                </div>
+                <!-- Category 3: Data Science & Tools -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-                    <div class="skill-card text-center">
-                        <i class="bi bi-lightbulb skill-icon"></i>
-                        <h4>Innovation</h4>
-                        <p>Creating cutting-edge solutions for complex problems.</p>
+                    <div class="skill-card">
+                        <div class="skill-header">
+                            <i class="bi bi-bar-chart skill-icon"></i>
+                            <h4>Data Science</h4>
+                        </div>
+                        <ul class="skill-list">
+                            <li>Pandas & NumPy <span class="skill-level">Expert</span></li>
+                            <li>Matplotlib & Seaborn <span class="skill-level">Expert</span></li>
+                            <li>Beautifulsoup & Selenium<span class="skill-level">Expert</span></li>
+                            <li>NLP & SciPy <span class="skill-level">Advanced</span></li>
+                            <li>Power BI <span class="skill-level">Advanced</span></li>
+                            <li>OpenCV <span class="skill-level">Advanced</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Category 2: AI & Machine Learning -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="skill-card">
+                        <div class="skill-header">
+                            <i class="bi bi-robot skill-icon"></i>
+                            <h4>AI & Machine Learning</h4>
+                        </div>
+                        <ul class="skill-list">
+                            <li>TensorFlow <span class="skill-level">Expert</span></li>
+                            <li>PyTorch <span class="skill-level">Advanced</span></li>
+                            <li>Scikit-learn <span class="skill-level">Expert</span></li>
+                            <li>NLP (Transformers) <span class="skill-level">Advanced</span></li>
+                            <li>Computer Vision <span class="skill-level">Advanced</span></li>
+                            <li>YOLOv9 <span class="skill-level">Advanced</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Category 4: Web Development -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
+                    <div class="skill-card">
+                        <div class="skill-header">
+                            <i class="bi bi-globe skill-icon"></i>
+                            <h4>Data Base</h4>
+                        </div>
+                        <ul class="skill-list">
+                            <li>MongoDB <span class="skill-level">Expert</span></li>
+                            <li>MySQL <span class="skill-level">Expert</span></li>
+                            <li>Oracle <span class="skill-level">Advanced</span></li>
+                            <li>Cassandra <span class="skill-level">Advanced</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Category 5: Soft Skills -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="500">
+                    <div class="skill-card">
+                        <div class="skill-header">
+                            <i class="bi bi-people skill-icon"></i>
+                            <h4>Soft Skills</h4>
+                        </div>
+                        <ul class="skill-list">
+                            <li>Problem Solving <span class="skill-level">Expert</span></li>
+                            <li>Team Collaboration <span class="skill-level">Advanced</span></li>
+                            <li>Project Management <span class="skill-level">Advanced</span></li>
+                            <li>Communication <span class="skill-level">Advanced</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Category 6: Other Tools -->
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="600">
+                    <div class="skill-card">
+                        <div class="skill-header">
+                            <i class="bi bi-tools skill-icon"></i>
+                            <h4>Other Tools</h4>
+                        </div>
+                        <ul class="skill-list">
+                            <li>Git/GitHub <span class="skill-level">Expert</span></li>
+                            <li>Docker <span class="skill-level">Intermediate</span></li>
+                            <li>AWS Basics <span class="skill-level">Intermediate</span></li>
+                            <li>Linux <span class="skill-level">Advanced</span></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -183,6 +255,21 @@
                             <div class="d-flex gap-2">
                                 <span class="badge bg-primary">TensorFlow</span>
                                 <span class="badge bg-secondary">Python</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project 3 -->
+                <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal3" style="cursor: pointer;">
+                        <img src="images/projects/project_3/T1.jpg" class="project-img w-100" alt="Image Recognition App">
+                        <div class="p-4">
+                            <h4 class="mb-3">Tableau de Bord d'Analyse Sentimentale</h4>
+                            <p class="text-muted">Object identification with ML</p>
+                            <div class="d-flex gap-2">
+                                <span class="badge bg-primary">Microsoft Power BI</span>
+                                <span class="badge bg-secondary">Python</span>
+                                <span class="badge bg-secondary">NLP </span>
                             </div>
                         </div>
                     </div>
@@ -285,6 +372,60 @@
         </div>
     </section>
 
+
+    <!-- Modal for Project 3 with Carousel -->
+    <div class="modal fade" id="projectModal3" tabindex="-1" aria-labelledby="projectModal2Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="projectModal2Label">Tableau de Bord d'Analyse Sentimentale</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Carousel -->
+                    <div id="carouselProject2" class="carousel slide mb-3" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="images/projects/project_3/T1.jpg" class="d-block w-100" alt="Image Recognition App Screenshot 1">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselProject2" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                    <p class="text-muted">
+                        Nous avons conçu un tableau de bord interactif d'analyse sentimentale afin de permettre aux entreprises de mieux comprendre les retours de leurs clients et de prendre des décisions basées sur des données concrètes.
+
+                        Grâce à l’utilisation de techniques avancées de traitement du langage naturel (NLP), notre solution classifie automatiquement les avis clients en commentaires positifs ou négatifs. Cela permet à l'entreprise d'obtenir une vision claire des sentiments exprimés par ses clients en temps réel.
+                        
+                        L’ensemble des données classifiées est ensuite intégré à un tableau de bord Power BI interactif, offrant des visualisations dynamiques et des insights exploitables pour piloter la performance de l'entreprise. Ce tableau de bord sert non seulement à évaluer la satisfaction client, mais aussi à optimiser la prise de décisions stratégiques.
+                        
+                        🎯 Objectif principal : accompagner les entreprises dans la gestion proactive de leur relation client, tout en les aidant à anticiper les futures initiatives de développement et à affiner leur stratégie.
+                    </p>
+                    <h6>Technologies:</h6>
+                    <ul class="list-unstyled d-flex flex-wrap gap-2">
+                        <li><span class="badge bg-primary">TensorFlow</span></li>
+                        <li><span class="badge bg-secondary">Python</span></li>
+                        <li><span class="badge bg-secondary">NLP</span></li>
+                        <li><span class="badge bg-secondary">Natural Language Toolkit</span></li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <a href="https://github.com/yourusername/image-recognition" target="_blank" class="btn btn-outline-primary">View on GitHub</a>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
     <!-- Testimonials Section -->
     <section class="testimonials-section" id="testimonials">
         <div class="container">
@@ -339,7 +480,7 @@
                     <div class="carousel-item">
                         <div class="row g-4 justify-content-center">
                             <!-- Testimonial 4 -->
-                            <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+                            <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                                 <div class="testimonial-card text-center">
                                     <a href="https://www.linkedin.com/in/refka-frioui" target="_blank" class="d-block mb-3">
                                         <img src="images/testimonials/refka_frioui.jpg" alt="Refka Frioui" class="rounded-circle mb-3" style="width: 100px; height: 100px; object-fit: cover;">
@@ -349,6 +490,33 @@
                                     </p>
                                     <button class="btn btn-link read-more-btn" style="display: none;">Read More</button>
                                     <p class="testimonial-author">- Refka Frioui</p>
+                                </div>
+                            </div>
+                            <!-- Testimonial 5 -->
+                            <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+                                <div class="testimonial-card text-center">
+                                    <a href="https://www.linkedin.com/in/khlifi-ibtihel-9429a3258" target="_blank" class="d-block mb-3">
+                                        <img src="images/testimonials/khlifi_ibtihel.jpg" alt="Khlifi Ibtihel" class="rounded-circle mb-3" style="width: 100px; height: 100px; object-fit: cover;">
+                                    </a>
+                                    <p class="testimonial-text">
+                                        "J'ai eu l'occasion de collaborer avec Mhamed Bouguerra sur un projet freelance. Il se distingue par son expertise technique en intelligence artificielle et par sa capacité à partager ses connaissances avec clarté et efficacité. Son professionnalisme et sa rigueur ont grandement contribué au succès de notre collaboration."
+                                    </p>
+                                    <button class="btn btn-link read-more-btn" style="display: none;">Read More</button>
+                                    <p class="testimonial-author">- Khlifi Ibtihel</p>
+                                </div>
+                            </div>
+                            <!-- Testimonial 6 -->
+                            <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+                                <div class="testimonial-card text-center">
+                                    <a href="https://www.linkedin.com/in/nassim-fatnassi-hnifi-a1698a186" target="_blank" class="d-block mb-3">
+                                        <img src="images/testimonials/nassim_fatnassi.jpg" alt="Nassim Fatnassi" class="rounded-circle mb-3" style="width: 100px; height: 100px; object-fit: cover;">
+                                    </a>
+                                    <p class="testimonial-text">
+                                        "I highly recommend Mhamed Bouguerra for his exceptional guidance on AI projects. Mhamed’s expertise in artificial intelligence was invaluable, offering clear advice and effective solutions that significantly improved my project. His support was instrumental in overcoming challenges and achieving success.
+                                        Thank you, Mhamed, for your outstanding assistance. I recommend him wholeheartedly for any AI-related work."
+                                    </p>
+                                    <button class="btn btn-link read-more-btn" style="display: none;">Read More</button>
+                                    <p class="testimonial-author">- Nassim Fatnassi</p>
                                 </div>
                             </div>
                         </div>
