--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
                     <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal1" style="cursor: pointer;">
                         <img src="images/projects/project_1/T1.jpg" class="project-img w-100" alt="AI-Powered Chatbot">
                         <div class="p-4">
-                            <h4 class="mb-3">AI-Powered Chatbot</h4>
-                            <p class="text-muted">Advanced conversational AI</p>
+                            <h4 class="mb-3">CV recommendation system for recruiters</h4>
+                            <p class="text-muted">AI-powered talent matching system.</p>
                             <div class="d-flex gap-2">
-                                <span class="badge bg-primary">NLP</span>
                                 <span class="badge bg-secondary">Python</span>
+                                <span class="badge bg-primary">NLP</span>
                             </div>
                         </div>
                     </div>
@@ -251,10 +251,10 @@
                 <!-- Project 2 -->
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal2" style="cursor: pointer;">
-                        <img src="images/projects/project_2/T1.png" class="project-img w-100" alt="Image Recognition App">
+                        <img src="images/projects/project_2/T1.png" class="project-img w-100" alt="Facial Recognition Attendance Management System">
                         <div class="p-4">
-                            <h4 class="mb-3">Image Recognition App</h4>
-                            <p class="text-muted">Object identification with ML</p>
+                            <h4 class="mb-3">Facial Recognition Attendance Management System</h4>
+                            <p class="text-muted">Facial recognition for smart workforce management.</p>
                             <div class="d-flex gap-2">
                                 <span class="badge bg-primary">TensorFlow</span>
                                 <span class="badge bg-secondary">Python</span>
@@ -265,7 +265,7 @@
                 <!-- Project 3 -->
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal3" style="cursor: pointer;">
-                        <img src="images/projects/project_3/T1.jpg" class="project-img w-100" alt="Image Recognition App">
+                        <img src="images/projects/project_3/T1.jpg" class="project-img w-100" alt="Facial Recognition Attendance Management System">
                         <div class="p-4">
                             <h4 class="mb-3">Tableau de Bord d'Analyse Sentimentale</h4>
                             <p class="text-muted">Object identification with ML</p>
@@ -285,7 +285,7 @@
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="projectModal1Label">AI-Powered Chatbot</h5>
+                        <h5 class="modal-title" id="projectModal1Label">CV recommendation system for recruiters</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -309,18 +309,29 @@
                             </button>
                         </div>
                         <p class="text-muted">
-                            This project leverages advanced Natural Language Processing (NLP) techniques to develop a conversational AI system powered by transformer-based architectures. It integrates large language models (LLMs) for context-aware dialogue generation, optimized for scalability and real-time interaction.
+                            Imagine a tool that simplifies your candidate selection process.
+                            No more wasting time sorting through irrelevant resumes.
+                            No more missing out on the best candidates.
+                            
+                            As part of a freelance project, I developed a Resume Recommendation System designed to help you effortlessly identify top talent.
+                            All you need to do is connect the system to your resume database, select the key skills, job domain, and any other criteria, and our system will recommend the most relevant resumes – with a matching percentage for each.
+                            
+                            Why you’ll love it:
+                            ⏳ Time-saving: Instantly see which candidates fit your needs.
+                            🔍 Accurate: View only the resumes that match the role you're hiring for.
+                            🚀 Efficient: Focus on the best profiles, without the hassle of manual searching.
                         </p>
                         <h6>Technologies:</h6>
                         <ul class="list-unstyled d-flex flex-wrap gap-2">
-                            <li><span class="badge bg-primary">NLP</span></li>
                             <li><span class="badge bg-secondary">Python</span></li>
-                            <li><span class="badge bg-secondary">TensorFlow</span></li>
+                            <li><span class="badge bg-primary">NLP</span></li>
+                            <li><span class="badge bg-primary">NER</span></li>
                             <li><span class="badge bg-secondary">Transformers</span></li>
+                            <li><span class="badge bg-primary">LLM</span></li>
                         </ul>
                     </div>
                     <div class="modal-footer">
-                        <a href="https://github.com/yourusername/chatbot" target="_blank" class="btn btn-outline-primary">View on GitHub</a>
+                        <a href="https://www.linkedin.com/feed/update/urn:li:activity:7248736924943732736" target="_blank" class="btn btn-outline-primary">View on GitHub</a>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
@@ -332,7 +343,7 @@
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="projectModal2Label">Image Recognition App</h5>
+                        <h5 class="modal-title" id="projectModal2Label">Facial Recognition Attendance Management System</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -340,10 +351,10 @@
                         <div id="carouselProject2" class="carousel slide mb-3" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="images/projects/project_2/T1.png" class="d-block w-100" alt="Image Recognition App Screenshot 1">
+                                    <img src="images/projects/project_2/T1.png" class="d-block w-100" alt="Facial Recognition Attendance Management System Screenshot 1">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="images/projects/project_2/T2.png" class="d-block w-100" alt="Image Recognition App Screenshot 2">
+                                    <img src="images/projects/project_2/T2.png" class="d-block w-100" alt="Facial Recognition Attendance Management System Screenshot 2">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2" data-bs-slide="prev">
@@ -356,18 +367,28 @@
                             </button>
                         </div>
                         <p class="text-muted">
-                            A sophisticated computer vision application utilizing convolutional neural networks (CNNs) to perform real-time object detection and classification. Built with TensorFlow, this project demonstrates robust feature extraction and high-accuracy predictions on diverse datasets.
+                            I've developed a cutting-edge facial recognition system designed to streamline employee attendance and administrative access. This system not only enhances security but also simplifies workforce management with features like seamless employee onboarding and real-time employee information display.
+
+                            Key features include:
+                            ✨ Facial Recognition Technology: Accurate and efficient attendance tracking. 
+                            ✨ Administrative Access Control: Secure and manage access permissions effortlessly. 
+                            ✨ Employee Database Management: Easily add and remove employees, with instant access to employee details.
+
+                            I'm dedicated to leveraging AI for practical solutions that transform business operations. This project underscores my commitment to innovation and efficiency in workplace management.
                         </p>
                         <h6>Technologies:</h6>
                         <ul class="list-unstyled d-flex flex-wrap gap-2">
-                            <li><span class="badge bg-primary">TensorFlow</span></li>
                             <li><span class="badge bg-secondary">Python</span></li>
-                            <li><span class="badge bg-secondary">Computer Vision</span></li>
-                            <li><span class="badge bg-secondary">CNNs</span></li>
+                            <li><span class="badge bg-primary">Computer Vision</span></li>
+                            <li><span class="badge bg-secondary">Deep Learning</span></li>
+                            <li><span class="badge bg-secondary">TensorFlow</span></li>
+                            <li><span class="badge bg-secondary">MongoDB</span></li>
+                            <li><span class="badge bg-primary">PyQt</span></li>
+                            <li><span class="badge bg-secondary">FastAPI</span></li>
                         </ul>
                     </div>
                     <div class="modal-footer">
-                        <a href="https://github.com/yourusername/image-recognition" target="_blank" class="btn btn-outline-primary">View on GitHub</a>
+                        <a href="https://www.linkedin.com/feed/update/urn:li:activity:7213594558922711041/" target="_blank" class="btn btn-outline-primary">View on GitHub</a>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
@@ -389,7 +410,7 @@
                     <div id="carouselProject2" class="carousel slide mb-3" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="images/projects/project_3/T1.jpg" class="d-block w-100" alt="Image Recognition App Screenshot 1">
+                                <img src="images/projects/project_3/T1.jpg" class="d-block w-100" alt="Facial Recognition Attendance Management System Screenshot 1">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2" data-bs-slide="prev">
@@ -525,6 +546,46 @@
                                     <p class="testimonial-author">- Nassim Fatnassi</p>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <!-- In the Testimonials Section -->
+                    <div class="carousel-item">
+                        <div class="row g-4 justify-content-center">
+                            <!-- New Testimonial -->
+                            <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+                                <div class="testimonial-card text-center">
+                                    <a href="https://www.linkedin.com/in/hamdi-baklouti/" target="_blank" class="d-block mb-3">
+                                        <img src="images/testimonials/Hamdi Baklouti.jpg" alt="Hamdi Baklouti" 
+                                            class="rounded-circle mb-3" style="width: 100px; height: 100px; object-fit: cover;">
+                                    </a>
+                                    <p class="testimonial-text">
+                                        "I highly recommend Mhamed Bouguerra for his exceptional guidance on AI projects. Mhamed’s expertise in artificial intelligence was invaluable, offering clear advice and effective solutions that significantly improved my project. His support was instrumental in overcoming challenges and achieving success.
+                                        Thank you, Mhamed, for your outstanding assistance. I recommend him wholeheartedly for any AI-related work."
+                                    </p>
+                                    <button class="btn btn-link read-more-btn" style="display: none;">Read More</button>
+                                    <p class="testimonial-author">- Hamdi Baklouti</p>
+                                </div>
+                            </div>
+
+
+                            <!-- New Testimonial -->
+                            <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+                                <div class="testimonial-card text-center">
+                                    <a href="https://www.linkedin.com/in/hamdi-baklouti/" target="_blank" class="d-block mb-3">
+                                        <img src="images/testimonials/Brahmi Radhia.jpg" alt="Brahmi Radhia" 
+                                            class="rounded-circle mb-3" style="width: 100px; height: 100px; object-fit: cover;">
+                                    </a>
+                                    <p class="testimonial-text">
+                                        "I am pleased to recommend Mhamed BOUGUERRA for his exceptional contributions to our collaborative project. Working together, Mhamed demonstrated outstanding expertise in classifying machine sounds into normal and abnormal categories using an LSTM neural network. His skills in extracting and processing audio features, coupled with his thorough approach to training, validation, and testing, were pivotal to our success.
+                                        Additionally, Mhamed played a key role in developing a system to identify and classify machine faults based on sound, including determining the specific area of the machine affected. His professionalism and technical skills greatly enhanced our project.
+                                        Thank you, Mhamed, for your excellent collaboration and dedication. I highly recommend Mhamed for any advanced machine learning and audio analysis projects."
+                                    </p>
+                                    <button class="btn btn-link read-more-btn" style="display: none;">Read More</button>
+                                    <p class="testimonial-author">- Brahmi Radhia</p>
+                                </div>
+                            </div>
+                            <!-- Keep existing testimonials in this slide -->
+                            <!-- Add other testimonials here if needed -->
                         </div>
                     </div>
                 </div>
